# ayon_addon_boilerplate

./: README.md  ayon_build_addons.py
ayon_addons/: create_ayon_addons.py  readme.md
ayon_addons/studiotoolkit/client/: readme.md
ayon_addons/studiotoolkit/server/: __init__.py  readme.md
ayon_addons/studiotoolkit/server/settings/: __init__.py  main.py
core/: __init__.py  ayon_addon.py  pyproject.toml  version.py
