[project]
name="studiotoolkit"
description="StudioName toolkit"

[tool.poetry.dependencies]
python = ">=3.9.1,<3.10"
aiohttp_json_rpc = "*" # TVPaint server
clique = "1.6.*"
"Qt.py" = "^1.3.3"
QtPy = "^2.3.0"
qtawesome = "0.7.3"
#shotgun_api3 = {git = "https://github.com/shotgunsoftware/python-api.git", rev = "v3.3.3"}
#sgtk = {git = "https://github.com/shotgunsoftware/tk-core", rev = "v0.20.29"}

Pillow = "^9.0"
#requests = "^2.25.1"
#urllib3 = "1.26.16"
#ftputil= "5.0.4"

photoshop-python-api="0.22.4"
psd-tools= "1.9.28"
OpenTimelineIO= "0.15.0"
